# openfga

./: 0.outline.md  AGENTS.md  README.md  pyproject.toml  temp.md  模型格式优化报告.md
.cursor/rules/: book.mdc  no-ai.mdc
.lingma/agents/: project-analyzer.md
.lingma/rules/: constitution.md  users.md
chapters/: README.md  第10章-性能优化与扩展.md  第11章-部署与运维.md  第12章-企业级应用实践案例.md  第13章-系统集成实践.md  第13章-系统集成实践.md.backup  第14章-AI场景权限管理基础与框架集成.md  第14章-授权系统对比与迁移策略.md  第15章-AI场景权限管理基础与框架集成.md  第16章-AI应用实践案例与最佳实践.md  第16章重构报告.md  第17章-总结与展望.md  第1章-引言.md  第2章-授权概念基础.md  第3章-快速入门.md  第4章-OpenFGA架构与组件.md  第5章-授权模型设计.md  第6章-关系元组管理.md  第7章-HTTP和gRPC-API使用.md  第8章-SDK集成实战.md  第8章-高级授权模式.md  第9章-性能优化与扩展.md  第9章-高级授权模式.md  附录A-术语表.md  附录B-API参考速查.md  附录C-代码示例索引.md  附录D-常见问题解答.md  附录E-最佳实践速查.md
integrates/: README.md  test_integrations.py  集成示例创建报告.md  集成示例开发完成报告.md
integrates/01.python-sdk-basic/: .env.example  .gitignore  MODEL_FORMAT.md  PROJECT_OVERVIEW.md  README.md  authorization_model.fga  client.py  examples.py  quick_test.py  requirements.txt  setup.py
integrates/02.nodejs-sdk-basic/: .env.example  .gitignore  INSTALLATION_REPORT.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  package.json  (+3 more)
openfga/: README.md  第10章-部署与运维.md  第11章-企业级应用实践案例.md  第12章-系统集成实践.md  第15章-AI应用实践案例与最佳实践.md  第16章-总结与展望.md  第2章-授权概念基础.md  第3章-OpenFGA架构与组件.md  第5章-关系元组管理.md  附录F-参考文献与推荐阅读.md
prompts/: 1.openfga.md  2.outline.md  3.titles.md
temp/: book-enhancement-plan.md  execution-plan.md  后续改进任务清单.md  章节重构计划.md  章节重构进度报告-更新.md  章节重构进度报告.md  第3章重构报告.md  项目状态分析报告.md
(+118 files in other folders)
